lib/src/native/inference_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Dart FFI bindings for the native inference ABI.
class InferenceBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  InferenceBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  InferenceBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<llm_ctx> llm_load_model(
    ffi.Pointer<ffi.Char> gguf_path,
    int n_gpu_layers,
    int n_ctx,
    int n_threads,
    int backend_hint,
    ffi.Pointer<ffi.Char> err_buf,
    int err_buf_len,
  ) {
    return _llm_load_model(
      gguf_path,
      n_gpu_layers,
      n_ctx,
      n_threads,
      backend_hint,
      err_buf,
      err_buf_len,
    );
  }

  late final _llm_load_modelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<llm_ctx> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('llm_load_model');
  late final _llm_load_model = _llm_load_modelPtr.asFunction<
      ffi.Pointer<llm_ctx> Function(ffi.Pointer<ffi.Char>, int, int, int, int,
          ffi.Pointer<ffi.Char>, int)>();

  void llm_free_model(
    ffi.Pointer<llm_ctx> ctx,
  ) {
    return _llm_free_model(
      ctx,
    );
  }

  late final _llm_free_modelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llm_ctx>)>>(
          'llm_free_model');
  late final _llm_free_model =
      _llm_free_modelPtr.asFunction<void Function(ffi.Pointer<llm_ctx>)>();

  int llm_apply_chat_template(
    ffi.Pointer<llm_ctx> ctx,
    ffi.Pointer<ffi.Char> messages_json,
    ffi.Pointer<ffi.Char> out,
    int out_len,
  ) {
    return _llm_apply_chat_template(
      ctx,
      messages_json,
      out,
      out_len,
    );
  }

  late final _llm_apply_chat_templatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<llm_ctx>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('llm_apply_chat_template');
  late final _llm_apply_chat_template = _llm_apply_chat_templatePtr.asFunction<
      int Function(ffi.Pointer<llm_ctx>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  int llm_start_generation(
    ffi.Pointer<llm_ctx> ctx,
    ffi.Pointer<ffi.Char> prompt,
    int max_tokens,
    double temperature,
    double top_p,
    int top_k,
    double repeat_penalty,
    int seed,
    llm_token_cb cb,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _llm_start_generation(
      ctx,
      prompt,
      max_tokens,
      temperature,
      top_p,
      top_k,
      repeat_penalty,
      seed,
      cb,
      user,
    );
  }

  late final _llm_start_generationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<llm_ctx>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Uint32,
              llm_token_cb,
              ffi.Pointer<ffi.Void>)>>('llm_start_generation');
  late final _llm_start_generation = _llm_start_generationPtr.asFunction<
      int Function(ffi.Pointer<llm_ctx>, ffi.Pointer<ffi.Char>, int, double,
          double, int, double, int, llm_token_cb, ffi.Pointer<ffi.Void>)>();

  int llm_start_generation_async(
    ffi.Pointer<llm_ctx> ctx,
    ffi.Pointer<ffi.Char> prompt,
    int max_tokens,
    double temperature,
    double top_p,
    int top_k,
    double repeat_penalty,
    int seed,
    llm_token_cb cb,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _llm_start_generation_async(
      ctx,
      prompt,
      max_tokens,
      temperature,
      top_p,
      top_k,
      repeat_penalty,
      seed,
      cb,
      user,
    );
  }

  late final _llm_start_generation_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<llm_ctx>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Uint32,
              llm_token_cb,
              ffi.Pointer<ffi.Void>)>>('llm_start_generation_async');
  late final _llm_start_generation_async =
      _llm_start_generation_asyncPtr.asFunction<
          int Function(ffi.Pointer<llm_ctx>, ffi.Pointer<ffi.Char>, int,
              double, double, int, double, int, llm_token_cb,
              ffi.Pointer<ffi.Void>)>();

  int llm_get_generation_status(
    ffi.Pointer<llm_ctx> ctx,
  ) {
    return _llm_get_generation_status(
      ctx,
    );
  }

  late final _llm_get_generation_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llm_ctx>)>>(
          'llm_get_generation_status');
  late final _llm_get_generation_status = _llm_get_generation_statusPtr
      .asFunction<int Function(ffi.Pointer<llm_ctx>)>();

  void llm_cancel_generation(
    ffi.Pointer<llm_ctx> ctx,
  ) {
    return _llm_cancel_generation(
      ctx,
    );
  }

  late final _llm_cancel_generationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llm_ctx>)>>(
          'llm_cancel_generation');
  late final _llm_cancel_generation = _llm_cancel_generationPtr
      .asFunction<void Function(ffi.Pointer<llm_ctx>)>();

  int llm_get_kv_cache_used(
    ffi.Pointer<llm_ctx> ctx,
  ) {
    return _llm_get_kv_cache_used(
      ctx,
    );
  }

  late final _llm_get_kv_cache_usedPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llm_ctx>)>>(
          'llm_get_kv_cache_used');
  late final _llm_get_kv_cache_used = _llm_get_kv_cache_usedPtr
      .asFunction<int Function(ffi.Pointer<llm_ctx>)>();

  void llm_get_metrics(
    ffi.Pointer<llm_ctx> ctx,
    ffi.Pointer<ffi.Double> time_to_first_token_ms,
    ffi.Pointer<ffi.Double> tokens_per_sec,
    ffi.Pointer<ffi.Int32> n_prompt_tokens,
    ffi.Pointer<ffi.Int32> n_decoded,
  ) {
    return _llm_get_metrics(
      ctx,
      time_to_first_token_ms,
      tokens_per_sec,
      n_prompt_tokens,
      n_decoded,
    );
  }

  late final _llm_get_metricsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<llm_ctx>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>)>>('llm_get_metrics');
  late final _llm_get_metrics = _llm_get_metricsPtr.asFunction<
      void Function(
          ffi.Pointer<llm_ctx>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>)>();

  int llm_probe_backends(
    ffi.Pointer<ffi.Int32> out_vulkan_ok,
    ffi.Pointer<ffi.Int32> out_opencl_ok,
  ) {
    return _llm_probe_backends(
      out_vulkan_ok,
      out_opencl_ok,
    );
  }

  late final _llm_probe_backendsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>)>>('llm_probe_backends');
  late final _llm_probe_backends = _llm_probe_backendsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Int32>)>();

  ffi.Pointer<ffi.Char> llm_version() {
    return _llm_version();
  }

  late final _llm_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'llm_version');
  late final _llm_version =
      _llm_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();
}

final class llm_ctx extends ffi.Opaque {}

typedef llm_token_cbFunction = ffi.Void Function(ffi.Pointer<ffi.Char> token,
    ffi.Int32 len, ffi.Int32 is_final, ffi.Pointer<ffi.Void> user);
typedef Dartllm_token_cbFunction = void Function(ffi.Pointer<ffi.Char> token,
    int len, int is_final, ffi.Pointer<ffi.Void> user);
typedef llm_token_cb = ffi.Pointer<ffi.NativeFunction<llm_token_cbFunction>>;
